base/src/test/resources/failure/tyck/issues/issue300.aya.txt
In file $FILE:6:35 ->

  4 |   | (zero, b), unit x => b
  5 |   | (a, zero), y => a
  6 |   | (suc a, suc b), unit y => suc (max (a, b))
                                         ^--------^

Error: Cannot check the expression
         max (a, b)
       of type
         Unit -> Nat
       against the type
         Nat

1 error(s), 0 warning(s).
What are you doing?
